# rbeval

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
src/rbeval/: dash.py  eval.py  eval_spec.py
src/rbeval/plot/: __main__.py  dash_utils.py  data.py  judge_llm_plots.py  model_comp.py  score_cdf.py  score_cdf_altair.py  utils.py
src/rbeval/qa_gen/: client.py  eval_answers.py  gen_answers.py
