[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rbeval"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.2.2",
    "matplotlib>=3.9.1",
    "huggingface-hub>=0.24.2",
    "tqdm>=4.66.4",
    "numpy>=1.26.4",
    "dacite>=1.8.1",
    "seaborn>=0.13.2"
]

[project.optional-dependencies]
eval = [
    "lm-eval[vllm]==0.4.3"
]

[tool.mypy]
check_untyped_defs = true
files = ["tests", "src/rbeval"]
