[project]
name = "rbeval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.2",
    "matplotlib>=3.9.2",
    "huggingface-hub>=0.24.2",
    "tqdm>=4.66.4",
    "numpy>=1.26.4",
    "dacite>=1.8.1",
    "seaborn>=0.13.2",
    "altair>=5.4.1",
    "streamlit>=1.37.1",
    "scikit-learn>=1.5.1",
]

[project.optional-dependencies]
eval = [
    "lm-eval[vllm]==0.4.3"
]

[tool.mypy]
check_untyped_defs = true
files = ["tests", "src/rbeval"]
