[project]
name = "rbeval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.2",
    "matplotlib>=3.9.2",
    "huggingface-hub>=0.24.2",
    "tqdm>=4.66.4",
    "numpy>=1.26.4",
    "dacite>=1.8.1",
    "seaborn>=0.13.2",
    "altair>=5.4.1",
    "streamlit>=1.37.1",
    "scikit-learn>=1.5.1",
    "openai>=1.42.0",
    "datasets>=2.21.0",
    "polars>=1.6.0",
    "aiolimiter>=1.1.0",
]

[project.optional-dependencies]
eval = [
    "lm-eval[vllm]==0.4.3"
]

[tool.mypy]
check_untyped_defs = true
files = ["tests", "src/rbeval"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "types-pyyaml>=6.0.12.20240808",
    "types-tqdm>=4.66.0.20240417",
    "pandas-stubs>=2.2.2.240807",
]
